--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
     </section>
 </body>
-<!---------------------------about section--------------->
+<!--------------about section--------------->
 <section class="about" id="about">
     <h4>About</h4>
     <div class="about-sec">
